--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -43,23 +43,24 @@
     "up:uniapp": "npx @dcloudio/uvm@latest"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-4080420251103001",
-    "@dcloudio/uni-app-harmony": "3.0.0-4080420251103001",
-    "@dcloudio/uni-app-plus": "3.0.0-4080420251103001",
-    "@dcloudio/uni-components": "3.0.0-4080420251103001",
-    "@dcloudio/uni-h5": "3.0.0-4080420251103001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-4080420251103001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-4080420251103001",
-    "@dcloudio/uni-mp-harmony": "3.0.0-4080420251103001",
-    "@dcloudio/uni-mp-jd": "3.0.0-4080420251103001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-4080420251103001",
-    "@dcloudio/uni-mp-lark": "3.0.0-4080420251103001",
-    "@dcloudio/uni-mp-qq": "3.0.0-4080420251103001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-4080420251103001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-4080420251103001",
-    "@dcloudio/uni-mp-xhs": "3.0.0-4080420251103001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-4080420251103001",
+    "@dcloudio/uni-app": "3.0.0-4080520251106001",
+    "@dcloudio/uni-app-harmony": "3.0.0-4080520251106001",
+    "@dcloudio/uni-app-plus": "3.0.0-4080520251106001",
+    "@dcloudio/uni-components": "3.0.0-4080520251106001",
+    "@dcloudio/uni-h5": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-harmony": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-jd": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-lark": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-qq": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-xhs": "3.0.0-4080520251106001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-4080520251106001",
     "@weapp-core/escape": "^5.0.1",
+    "class-variance-authority": "^0.7.1",
     "clipboard": "^2.0.11",
     "dayjs": "^1.11.19",
     "eventemitter3": "^5.0.1",
@@ -77,10 +78,11 @@
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.12",
-    "@dcloudio/uni-automator": "3.0.0-4080420251103001",
-    "@dcloudio/uni-cli-shared": "3.0.0-4080420251103001",
-    "@dcloudio/uni-stacktracey": "3.0.0-4080420251103001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-4080420251103001",
+    "@dcloudio/uni-automator": "3.0.0-4080520251106001",
+    "@dcloudio/uni-cli-shared": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-vue": "3.0.0-4070620250821001",
+    "@dcloudio/uni-stacktracey": "3.0.0-4080520251106001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-4080520251106001",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.7",
