--- a/demo/mpx-app/package.json
+++ b/demo/mpx-app/package.json
@@ -67,7 +67,7 @@
     "sass": "^1.93.3",
     "sass-loader": "^16.0.6",
     "tailwindcss": "catalog:tailwindcss3",
-    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "tailwindcss-patch": "^8.2.1",
     "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
     "ts-jest": "^29.2.5",
     "typescript": "catalog:typescript59",
