--- a/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
+++ b/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
@@ -11,7 +11,7 @@
     "@tailwindcss/postcss": "catalog:tailwindcss4",
     "@weapp-tailwindcss/merge": "catalog:weappMerge",
     "tailwindcss": "catalog:tailwindcss4",
-    "tailwindcss-patch": "catalog:tailwindcssPatch",
+    "tailwindcss-patch": "^8.2.1",
     "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*",
     "@weapp-tailwindcss/debug-uni-app-x": "workspace:*"
