chore(deps): upgrade

--- a/demo/uni-app-x-hbuilderx-tailwindcss3/package.json
+++ b/demo/uni-app-x-hbuilderx-tailwindcss3/package.json
@@ -8,11 +8,11 @@
     "build": "echo uni-app-x-hbuilderx-tailwindcss3"
   },
   "devDependencies": {
+    "@weapp-tailwindcss/debug-uni-app-x": "workspace:*",
     "@weapp-tailwindcss/merge": "catalog:weappMerge",
     "tailwindcss": "catalog:tailwindcss3",
-    "tailwindcss-patch": "^8.2.1",
+    "tailwindcss-patch": "^8.2.2",
     "weapp-ide-cli": "catalog:weappIdeCli",
-    "weapp-tailwindcss": "workspace:*",
-    "@weapp-tailwindcss/debug-uni-app-x": "workspace:*"
+    "weapp-tailwindcss": "workspace:*"
   }
 }
