--- a/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
+++ b/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
@@ -9,11 +9,11 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "catalog:tailwindcss4",
+    "@weapp-tailwindcss/debug-uni-app-x": "workspace:*",
     "@weapp-tailwindcss/merge": "catalog:weappMerge",
     "tailwindcss": "catalog:tailwindcss4",
-    "tailwindcss-patch": "^8.2.1",
+    "tailwindcss-patch": "^8.2.2",
     "weapp-ide-cli": "catalog:weappIdeCli",
-    "weapp-tailwindcss": "workspace:*",
-    "@weapp-tailwindcss/debug-uni-app-x": "workspace:*"
+    "weapp-tailwindcss": "workspace:*"
   }
 }
