--- a/website/package.json
+++ b/website/package.json
@@ -37,7 +37,9 @@
     "@docusaurus/preset-classic": "3.9.2",
     "@docusaurus/theme-live-codeblock": "^3.9.2",
     "@mdx-js/react": "^3.1.1",
+    "@weapp-tailwindcss/cva": "workspace:*",
     "@weapp-tailwindcss/merge": "workspace:*",
+    "@weapp-tailwindcss/variants": "workspace:*",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
     "prism-react-renderer": "^2.4.1",
