--- a/apps/vite-native-ts/package.json
+++ b/apps/vite-native-ts/package.json
@@ -25,7 +25,10 @@
     "postinstall": "weapp-tw patch"
   },
   "devDependencies": {
+    "@weapp-tailwindcss/cva": "workspace:*",
     "@weapp-tailwindcss/merge": "workspace:*",
+    "@weapp-tailwindcss/merge-v3": "workspace:*",
+    "@weapp-tailwindcss/variants": "workspace:*",
     "autoprefixer": "catalog:autoprefixer10",
     "miniprogram-api-typings": "catalog:miniApiTypings",
     "postcss": "catalog:postcss85",
