--- a/packages-runtime/merge-v3/package.json
+++ b/packages-runtime/merge-v3/package.json
@@ -37,5 +37,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
-  "publishConfig": {}
+  "publishConfig": {},
+  "dependencies": {
+    "@weapp-tailwindcss/runtime": "workspace:*",
+    "tailwind-merge": "^2.6.0"
+  }
 }
