--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -89,7 +89,9 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/typography": "^0.5.10",
     "@vue/runtime-core": "^3.5.22",
-    "@weapp-tailwindcss/merge": "catalog:weappMerge",
+    "@weapp-tailwindcss/merge": "workspace:*",
+    "@weapp-tailwindcss/merge-v3": "workspace:*",
+    "@weapp-tailwindcss/cva": "workspace:*",
     "@weapp-tailwindcss/typography": "workspace:*",
     "autoprefixer": "catalog:autoprefixer10",
     "domelementtype": "^2.3.0",
