--- a/how-to-build-components-by-tailwindcss/react-lib/package.json
+++ b/how-to-build-components-by-tailwindcss/react-lib/package.json
@@ -51,8 +51,7 @@
     "tailwindcss": "catalog:tailwindcss3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vite-plugin-dts": "^3.6.0",
-    "@tarojs/components": "catalog:taro36legacy"
+    "vite-plugin-dts": "^3.6.0"
   },
   "dependencies": {},
   "bugs": {
