--- a/packages-runtime/cva/package.json
+++ b/packages-runtime/cva/package.json
@@ -2,9 +2,10 @@
   "name": "@weapp-tailwindcss/cva",
   "type": "module",
   "version": "0.0.0",
-  "description": "tsdown bundler template",
+  "description": "class-variance-authority 的运行时封装，自动完成小程序 escape/unescape。",
   "author": "ice breaker <1324318532@qq.com>",
   "license": "MIT",
+  "homepage": "https://tw.icebreaker.top/docs/community/merge/cva-and-variants",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
@@ -13,7 +14,12 @@
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
   },
-  "keywords": [],
+  "keywords": [
+    "tailwindcss",
+    "cva",
+    "mini-program",
+    "variance"
+  ],
   "sideEffects": false,
   "exports": {
     ".": {
@@ -37,7 +43,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
-  "publishConfig": {},
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@weapp-tailwindcss/runtime": "workspace:*",
     "class-variance-authority": "^0.7.1"
