--- a/packages-runtime/merge/package.json
+++ b/packages-runtime/merge/package.json
@@ -2,9 +2,10 @@
   "name": "@weapp-tailwindcss/merge",
   "type": "module",
   "version": "2.0.1",
-  "description": "weapp-tailwindcss",
+  "description": "Tailwind Merge v3 的 weapp 运行时封装，自动处理 escape/unescape。",
   "author": "ice breaker <1324318532@qq.com>",
   "license": "MIT",
+  "homepage": "https://tw.icebreaker.top/docs/community/merge/overview",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
@@ -13,7 +14,13 @@
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
   },
-  "keywords": [],
+  "keywords": [
+    "tailwindcss",
+    "merge",
+    "mini-program",
+    "runtime",
+    "v4"
+  ],
   "sideEffects": false,
   "_exports": {
     ".": "./src/index.ts"
@@ -48,6 +55,7 @@
         "require": "./dist/index.cjs"
       }
     },
+    "access": "public",
     "main": "./dist/index.cjs",
     "module": "./dist/index.js",
     "types": "./dist/index.d.ts"
