--- a/packages-runtime/runtime/package.json
+++ b/packages-runtime/runtime/package.json
@@ -2,9 +2,10 @@
   "name": "@weapp-tailwindcss/runtime",
   "type": "module",
   "version": "0.0.0",
-  "description": "tsdown bundler template",
+  "description": "Shared runtime helpers (transformers, clsx wrappers, metadata) for weapp-tailwindcss 在小程序运行时的适配层。",
   "author": "ice breaker <1324318532@qq.com>",
   "license": "MIT",
+  "homepage": "https://tw.icebreaker.top/docs/community/merge/runtime-api",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
@@ -13,7 +14,12 @@
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
   },
-  "keywords": [],
+  "keywords": [
+    "tailwindcss",
+    "mini-program",
+    "runtime",
+    "escape"
+  ],
   "sideEffects": false,
   "exports": {
     ".": {
@@ -37,7 +43,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
-  "publishConfig": {},
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "@weapp-core/escape": "^5.0.1",
     "clsx": "^2.1.1"
