--- a/packages-runtime/typography/package.json
+++ b/packages-runtime/typography/package.json
@@ -8,7 +8,7 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sonofmagic/weapp-tailwindcss.git",
-    "directory": "plugins/typography"
+    "directory": "packages-runtime/typography"
   },
   "bugs": {
     "url": "https://github.com/sonofmagic/weapp-tailwindcss/issues"
