--- a/templates/vue-mini-tailwindcss-template/package.json
+++ b/templates/vue-mini-tailwindcss-template/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "1.0.0",
   "private": true,
-  "packageManager": "pnpm@10.8.1",
+  "packageManager": "pnpm@10.20.0",
   "engines": {
     "node": ">=18.19.1 <19 || >=20.6.1"
   },
@@ -16,21 +16,21 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "@vue-mini/core": "^1.2.2",
-    "tdesign-miniprogram": "^1.9.1",
-    "@weapp-tailwindcss/merge": "^2.0.1"
+    "@vue-mini/core": "^1.2.6",
+    "@weapp-tailwindcss/merge": "^2.1.0",
+    "tdesign-miniprogram": "^1.11.1"
   },
   "devDependencies": {
-    "@icebreakers/eslint-config": "^1.1.3",
+    "@icebreakers/eslint-config": "^1.5.9",
     "autoprefixer": "^10.4.21",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.26.0",
-    "miniprogram-api-typings": "^4.0.7",
-    "postcss": "^8.5.3",
+    "cross-env": "^10.1.0",
+    "eslint": "^9.39.1",
+    "miniprogram-api-typings": "^4.1.0",
+    "postcss": "^8.5.6",
     "sass-embedded": "^1.93.3",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3",
-    "weapp-tailwindcss": "^4.7.6",
+    "weapp-tailwindcss": "^4.7.7",
     "weapp-vite": "^5.9.0"
   },
   "pnpm": {
