chore: packages-runtime

--- a/packages-runtime/theme-transition/package.json
+++ b/packages-runtime/theme-transition/package.json
@@ -36,8 +36,8 @@
     "scss"
   ],
   "scripts": {
-    "dev": "tsup --watch --sourcemap",
-    "build": "tsup",
+    "dev": "tsdown --watch --sourcemap",
+    "build": "tsdown",
     "test": "vitest run",
     "test:dev": "vitest",
     "release": "pnpm publish",
