--- a/packages-runtime/theme-transition/package.json
+++ b/packages-runtime/theme-transition/package.json
@@ -22,14 +22,35 @@
   ],
   "sideEffects": false,
   "exports": {
-    ".": "./src/index.ts",
-    "./tailwindcss": "./src/tailwindcss.ts",
+    ".": {
+      "import": {
+        "types": "./dist/index.d.mts",
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
+    },
+    "./tailwindcss": {
+      "import": {
+        "types": "./dist/tailwindcss.d.mts",
+        "default": "./dist/tailwindcss.mjs"
+      },
+      "require": {
+        "types": "./dist/tailwindcss.d.cts",
+        "default": "./dist/tailwindcss.cjs"
+      }
+    },
     "./scss": "./scss/index.scss",
     "./scss/mixins": "./scss/mixins.scss",
     "./scss/*": "./scss/*",
     "./css": "./css/index.css",
     "./css/*": "./css/*"
   },
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.mts",
   "files": [
     "css",
     "dist",
@@ -48,14 +69,24 @@
   "publishConfig": {
     "exports": {
       ".": {
-        "types": "./dist/index.d.ts",
-        "import": "./dist/index.js",
-        "require": "./dist/index.cjs"
+        "import": {
+          "types": "./dist/index.d.mts",
+          "default": "./dist/index.mjs"
+        },
+        "require": {
+          "types": "./dist/index.d.cts",
+          "default": "./dist/index.cjs"
+        }
       },
       "./tailwindcss": {
-        "types": "./dist/tailwindcss.d.ts",
-        "import": "./dist/tailwindcss.js",
-        "require": "./dist/tailwindcss.cjs"
+        "import": {
+          "types": "./dist/tailwindcss.d.mts",
+          "default": "./dist/tailwindcss.mjs"
+        },
+        "require": {
+          "types": "./dist/tailwindcss.d.cts",
+          "default": "./dist/tailwindcss.cjs"
+        }
       },
       "./scss": "./scss/index.scss",
       "./scss/mixins": "./scss/mixins.scss",
@@ -64,7 +95,7 @@
       "./css/*": "./css/*"
     },
     "main": "./dist/index.cjs",
-    "module": "./dist/index.js",
-    "types": "./dist/index.d.ts"
+    "module": "./dist/index.mjs",
+    "types": "./dist/index.d.mts"
   }
 }
