chore: add js-bench

--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "@icebreakers/eslint-config": "^1.5.9",
     "@icebreakers/monorepo": "^2.2.0",
     "@icebreakers/stylelint-config": "^1.2.3",
+    "@swc/core": "^1.15.1",
     "@tailwindcss/postcss": "catalog:tailwindcss4",
     "@tailwindcss/vite": "catalog:tailwindcss4",
     "@tsconfig/recommended": "^1.0.13",
@@ -209,8 +210,9 @@
     "minimatch": "^10.1.1",
     "miniprogram-automator": "^0.12.1",
     "normalize-newline": "^5.0.0",
-    "npm-registry-fetch": "^19.1.0",
+    "npm-registry-fetch": "^19.1.1",
     "only-allow": "^1.2.1",
+    "oxc-parser": "^0.97.0",
     "pathe": "^2.0.3",
     "picocolors": "^1.1.1",
     "pkg-types": "^2.3.0",
