--- a/packages/weapp-tailwindcss/package.json
+++ b/packages/weapp-tailwindcss/package.json
@@ -163,6 +163,8 @@
     "test": "npm run postinstall && vitest run",
     "test:dev": "vitest",
     "test:ui": "vitest --ui",
+    "bench:js-handlers": "tsx scripts/js-bench.ts",
+    "bench:js-diff": "tsx scripts/js-bench-diff.ts",
     "clean": "tsx scripts/clean.ts",
     "get-decl": "tsx scripts/get-decl.ts",
     "ls:pack": "npm pack --dry-run",
