--- a/templates/taro-webpack-tailwindcss-v4/package.json
+++ b/templates/taro-webpack-tailwindcss-v4/package.json
@@ -45,50 +45,50 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.28.4",
-    "@tarojs/components": "4.1.6",
-    "@tarojs/helper": "4.1.6",
-    "@tarojs/plugin-framework-react": "4.1.6",
-    "@tarojs/plugin-platform-alipay": "4.1.6",
-    "@tarojs/plugin-platform-h5": "4.1.6",
-    "@tarojs/plugin-platform-harmony-hybrid": "4.1.6",
-    "@tarojs/plugin-platform-jd": "4.1.6",
-    "@tarojs/plugin-platform-qq": "4.1.6",
-    "@tarojs/plugin-platform-swan": "4.1.6",
-    "@tarojs/plugin-platform-tt": "4.1.6",
-    "@tarojs/plugin-platform-weapp": "4.1.6",
-    "@tarojs/react": "4.1.6",
-    "@tarojs/runtime": "4.1.6",
-    "@tarojs/shared": "4.1.6",
-    "@tarojs/taro": "4.1.6",
+    "@tarojs/components": "4.1.8",
+    "@tarojs/helper": "4.1.8",
+    "@tarojs/plugin-framework-react": "4.1.8",
+    "@tarojs/plugin-platform-alipay": "4.1.8",
+    "@tarojs/plugin-platform-h5": "4.1.8",
+    "@tarojs/plugin-platform-harmony-hybrid": "4.1.8",
+    "@tarojs/plugin-platform-jd": "4.1.8",
+    "@tarojs/plugin-platform-qq": "4.1.8",
+    "@tarojs/plugin-platform-swan": "4.1.8",
+    "@tarojs/plugin-platform-tt": "4.1.8",
+    "@tarojs/plugin-platform-weapp": "4.1.8",
+    "@tarojs/react": "4.1.8",
+    "@tarojs/runtime": "4.1.8",
+    "@tarojs/shared": "4.1.8",
+    "@tarojs/taro": "4.1.8",
+    "@weapp-tailwindcss/merge": "^2.1.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "@weapp-tailwindcss/merge": "^2.1.0"
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.4",
-    "@babel/preset-react": "^7.27.1",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-react": "^7.28.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
     "@tailwindcss/postcss": "^4.1.17",
-    "@tarojs/cli": "4.1.6",
-    "@tarojs/taro-loader": "4.1.6",
-    "@tarojs/webpack5-runner": "4.1.6",
+    "@tarojs/cli": "4.1.8",
+    "@tarojs/taro-loader": "4.1.8",
+    "@tarojs/webpack5-runner": "4.1.8",
     "@types/node": "^18",
     "@types/react": "^18.0.0",
     "@types/webpack-env": "^1.13.6",
-    "babel-preset-taro": "4.1.6",
+    "babel-preset-taro": "4.1.8",
     "eslint": "^8.57.0",
-    "eslint-config-taro": "4.1.6",
+    "eslint-config-taro": "4.1.8",
     "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "postcss": "^8.5.6",
-    "react-refresh": "^0.17.0",
-    "stylelint": "^16.23.1",
+    "react-refresh": "^0.18.0",
+    "stylelint": "^16.25.0",
     "tailwindcss": "^4.1.17",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.9.3",
     "weapp-ide-cli": "^4.1.0",
-    "weapp-tailwindcss": "^4.7.7",
-    "webpack": "5.101.3"
+    "weapp-tailwindcss": "^4.7.8",
+    "webpack": "5.102.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
