--- a/templates/uni-app-vite-vue3-tailwind-vscode-template/package.json
+++ b/templates/uni-app-vite-vue3-tailwind-vscode-template/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uni-app-vite-vue3-tailwind-vscode-template",
   "version": "0.0.0",
-  "packageManager": "pnpm@10.18.3",
+  "packageManager": "pnpm@10.22.0",
   "scripts": {
     "dev": "uni -p mp-weixin",
     "build": "npm run build:mp-weixin",
@@ -45,43 +45,43 @@
     "up:uniapp": "pnpx @dcloudio/uvm@latest"
   },
   "dependencies": {
-    "@dcloudio/uni-app": "3.0.0-4070620250821001",
-    "@dcloudio/uni-app-harmony": "3.0.0-4070620250821001",
-    "@dcloudio/uni-app-plus": "3.0.0-4070620250821001",
-    "@dcloudio/uni-components": "3.0.0-4070620250821001",
-    "@dcloudio/uni-h5": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-alipay": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-baidu": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-harmony": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-jd": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-kuaishou": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-lark": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-qq": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-toutiao": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-weixin": "3.0.0-4070620250821001",
-    "@dcloudio/uni-mp-xhs": "3.0.0-4070620250821001",
-    "@dcloudio/uni-quickapp-webview": "3.0.0-4070620250821001",
+    "@dcloudio/uni-app": "3.0.0-4080520251106001",
+    "@dcloudio/uni-app-harmony": "3.0.0-4080520251106001",
+    "@dcloudio/uni-app-plus": "3.0.0-4080520251106001",
+    "@dcloudio/uni-components": "3.0.0-4080520251106001",
+    "@dcloudio/uni-h5": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-harmony": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-jd": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-lark": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-qq": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-4080520251106001",
+    "@dcloudio/uni-mp-xhs": "3.0.0-4080520251106001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-4080520251106001",
     "@vue/shared": "3.4.21",
+    "@weapp-tailwindcss/merge": "^2.1.1",
     "pinia": "2.2.4",
     "vue": "^3.4.21",
-    "vue-i18n": "^9.1.9",
-    "@weapp-tailwindcss/merge": "^2.1.1"
+    "vue-i18n": "^9.1.9"
   },
   "devDependencies": {
     "@dcloudio/types": "^3.4.8",
-    "@dcloudio/uni-automator": "3.0.0-4070620250821001",
-    "@dcloudio/uni-cli-shared": "3.0.0-4070620250821001",
-    "@dcloudio/uni-stacktracey": "3.0.0-4070620250821001",
-    "@dcloudio/vite-plugin-uni": "3.0.0-4070620250821001",
+    "@dcloudio/uni-automator": "3.0.0-4080520251106001",
+    "@dcloudio/uni-cli-shared": "3.0.0-4080520251106001",
+    "@dcloudio/uni-stacktracey": "3.0.0-4080520251106001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-4080520251106001",
     "@egoist/tailwindcss-icons": "^1.9.0",
-    "@icebreakers/eslint-config": "^1.5.2",
-    "@icebreakers/stylelint-config": "^1.2.1",
+    "@icebreakers/eslint-config": "^1.5.9",
+    "@icebreakers/stylelint-config": "^1.2.3",
     "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/svg-spinners": "^1.2.4",
-    "@types/node": "^24.7.2",
+    "@types/node": "^24.10.1",
     "@vue/runtime-core": "^3.4.21",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.37.0",
+    "autoprefixer": "^10.4.22",
+    "eslint": "^9.39.1",
     "postcss": "^8.5.6",
     "sass": "^1.94.0",
     "tailwindcss": "^3.4.18",
