chore: bump version

--- a/website/package.json
+++ b/website/package.json
@@ -15,19 +15,19 @@
     "node": ">=16.14"
   },
   "scripts": {
-    "docusaurus": "docusaurus",
-    "dev": "docusaurus start --port 4000",
+    "docusaurus": "cross-env NO_UPDATE_NOTIFIER=1 docusaurus",
+    "dev": "cross-env NO_UPDATE_NOTIFIER=1 docusaurus start --port 4000",
     "dev:public": "node scripts/dev-public.mjs",
-    "dev:type": "cross-env TYPEDOC_WATCH=true docusaurus start --port 4000",
-    "build": "docusaurus build",
-    "build:github": "cross-env PROVIDER=GITHUB docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy:github": "cross-env PROVIDER=GITHUB docusaurus deploy",
-    "clear": "docusaurus clear",
-    "serve": "docusaurus serve",
-    "serve:public": "docusaurus serve --port 4000 --host 0.0.0.0",
-    "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids",
+    "dev:type": "cross-env NO_UPDATE_NOTIFIER=1 TYPEDOC_WATCH=true docusaurus start --port 4000",
+    "build": "cross-env NO_UPDATE_NOTIFIER=1 docusaurus build",
+    "build:github": "cross-env NO_UPDATE_NOTIFIER=1 PROVIDER=GITHUB docusaurus build",
+    "swizzle": "cross-env NO_UPDATE_NOTIFIER=1 docusaurus swizzle",
+    "deploy:github": "cross-env NO_UPDATE_NOTIFIER=1 PROVIDER=GITHUB docusaurus deploy",
+    "clear": "cross-env NO_UPDATE_NOTIFIER=1 docusaurus clear",
+    "serve": "cross-env NO_UPDATE_NOTIFIER=1 docusaurus serve",
+    "serve:public": "cross-env NO_UPDATE_NOTIFIER=1 docusaurus serve --port 4000 --host 0.0.0.0",
+    "write-translations": "cross-env NO_UPDATE_NOTIFIER=1 docusaurus write-translations",
+    "write-heading-ids": "cross-env NO_UPDATE_NOTIFIER=1 docusaurus write-heading-ids",
     "typecheck": "tsc",
     "build:docs": "node scripts/index.js",
     "e2e": "playwright test",
@@ -66,6 +66,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/node": "^24.10.1",
     "autoprefixer": "catalog:autoprefixer10",
+    "baseline-browser-mapping": "^2.8.28",
     "cross-env": "catalog:crossEnv",
     "docusaurus-plugin-llms": "^0.2.2",
     "docusaurus-plugin-sass": "^0.2.6",
