--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "lint:view": "npx @eslint/config-inspector",
     "publish-packages": "pnpm build && pnpm test && changeset version && changeset publish",
     "run:watch": "tsx scripts/watcher",
+    "showcase:update": "tsx scripts/update-showcase.ts",
     "set-private": "tsx scripts/setPrivate.ts",
     "script:init": "monorepo init",
     "script:sync": "monorepo sync",
@@ -159,8 +160,8 @@
     "@types/webpack": "^5.28.5",
     "@types/webpack-sources": "^3.2.3",
     "@types/webpack4": "npm:@types/webpack@^4.41.39",
-    "@vitest/coverage-v8": "~4.0.9",
-    "@vitest/ui": "~4.0.9",
+    "@vitest/coverage-v8": "~4.0.10",
+    "@vitest/ui": "~4.0.10",
     "@weapp-tailwindcss/shared": "workspace:*",
     "@weapp-tailwindcss/test-helper": "workspace:*",
     "anymatch": "^3.1.3",
@@ -184,7 +185,7 @@
     "diff": "^8.0.2",
     "dlv": "^1.1.3",
     "domhandler": "^5.0.3",
-    "es-toolkit": "^1.41.0",
+    "es-toolkit": "^1.42.0",
     "esbuild": "^0.27.0",
     "eslint": "^9.39.1",
     "execa": "^9.6.0",
@@ -212,7 +213,7 @@
     "normalize-newline": "^5.0.0",
     "npm-registry-fetch": "^19.1.1",
     "only-allow": "^1.2.1",
-    "oxc-parser": "^0.97.0",
+    "oxc-parser": "^0.98.0",
     "pathe": "^2.0.3",
     "picocolors": "^1.1.1",
     "pkg-types": "^2.3.0",
@@ -239,7 +240,7 @@
     "traverse": "^0.6.11",
     "ts-morph": "^27.0.2",
     "tsd": "^0.33.0",
-    "tsdown": "^0.16.4",
+    "tsdown": "^0.16.5",
     "tslib": "^2.8.1",
     "tsup": "^8.5.1",
     "tsx": "^4.20.6",
@@ -247,12 +248,13 @@
     "type-fest": "^5.2.0",
     "typescript": "catalog:typescript59",
     "unbuild": "^3.6.1",
+    "undici": "^7.16.0",
     "uuid": "^13.0.0",
     "vinyl": "^3.0.1",
     "vinyl-fs": "^4.0.2",
     "vite": "^7.2.2",
     "vite-plugin-inspect": "^11.3.3",
-    "vitest": "~4.0.9",
+    "vitest": "~4.0.10",
     "weapp-tailwindcss": "workspace:*",
     "weapp-tailwindcss-children": "catalog:weappChildren",
     "webpack": "5.102.1",
