--- a/apps/vue-app/package.json
+++ b/apps/vue-app/package.json
@@ -18,7 +18,7 @@
     "postcss": "catalog:postcss85",
     "tailwindcss": "catalog:tailwindcss4",
     "typescript": "catalog:typescript59tilde",
-    "vite": "^7.2.4",
+    "vite": "catalog:vite724",
     "vue-tsc": "^3.1.4"
   }
 }
