--- a/demo/taro-vite-tailwindcss-v4/package.json
+++ b/demo/taro-vite-tailwindcss-v4/package.json
@@ -88,7 +88,7 @@
     "tailwindcss-patch": "^8.2.4",
     "terser": "^5.44.1",
     "typescript": "catalog:typescript59",
-    "vite": "^7.2.4",
+    "vite": "catalog:vite5421",
     "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*"
   }
