fix: 修复未能把 `@import "tailwindcss"` 重写为 `weapp-tailwindcss` 的问题

--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "build": "turbo run build --filter=!./demo/*",
+    "build": "turbo run build",
     "build:docs": "turbo run build --filter=./website/",
     "build:apps": "turbo run build --filter=./apps/*",
     "build:pkgs": "turbo run build --filter=./packages/*",
