--- a/packages/weapptw/package.json
+++ b/packages/weapptw/package.json
@@ -2,6 +2,7 @@
   "name": "weapptw",
   "type": "module",
   "version": "0.0.0",
+  "private": true,
   "description": "tsdown bundler template",
   "author": "ice breaker <1324318532@qq.com>",
   "license": "MIT",
@@ -43,5 +44,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
-  "publishConfig": {}
+  "publishConfig": {
+    "access": "public"
+  }
 }
