--- a/apps/web-postcss7-compat/package.json
+++ b/apps/web-postcss7-compat/package.json
@@ -22,7 +22,7 @@
     "postinstall": "weapp-tw patch"
   },
   "dependencies": {
-    "tailwindcss-patch": "^8.2.4"
+    "tailwindcss-patch": "catalog:tailwindcssPatch"
   },
   "devDependencies": {
     "autoprefixer": "catalog:autoprefixer10",
