--- a/demo/uni-app-vue3-vite/package.json
+++ b/demo/uni-app-vue3-vite/package.json
@@ -102,7 +102,7 @@
     "postcss-rpx-transform": "catalog:postcssRpx",
     "sass": "^1.94.2",
     "tailwindcss": "catalog:tailwindcss3",
-    "tailwindcss-patch": "^8.2.4",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
     "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
     "typescript": "catalog:typescript59tilde",
     "vite": "catalog:vite724exact",
