--- a/demo/native-mina/package.json
+++ b/demo/native-mina/package.json
@@ -56,7 +56,7 @@
     "sass": "^1.94.2",
     "sass-loader": "^16.0.6",
     "tailwindcss": "catalog:tailwindcss3",
-    "tailwindcss-patch": "^8.2.4",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
     "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
     "typescript": "catalog:typescript59",
     "weapp-ide-cli": "catalog:weappIdeCli",
