--- a/demo/uni-app-webpack5/package.json
+++ b/demo/uni-app-webpack5/package.json
@@ -75,7 +75,7 @@
     "@dcloudio/uni-quickapp-webview": "2.0.2-4080520251106001",
     "@dcloudio/uni-stacktracey": "2.0.2-4080520251106001",
     "@dcloudio/uni-stat": "2.0.2-4080520251106001",
-    "@vue/shared": "^3.5.22",
+    "@vue/shared": "^3.5.24",
     "core-js": "^3.47.0",
     "flyio": "^0.6.14",
     "regenerator-runtime": "^0.14.1",
@@ -114,7 +114,7 @@
     "sass": "^1.94.2",
     "speed-measure-webpack-plugin": "^1.5.0",
     "tailwindcss": "catalog:tailwindcss3",
-    "tailwindcss-patch": "^8.2.4",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
     "tailwindcss-rem2px-preset": "catalog:tailwindcssRem",
     "typescript": "catalog:typescript59tilde",
     "vue-template-compiler": "2.6.14",
