--- a/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
+++ b/demo/uni-app-x-hbuilderx-tailwindcss4/package.json
@@ -12,7 +12,7 @@
     "@weapp-tailwindcss/debug-uni-app-x": "workspace:*",
     "@weapp-tailwindcss/merge": "catalog:weappMerge",
     "tailwindcss": "catalog:tailwindcss4",
-    "tailwindcss-patch": "^8.2.4",
+    "tailwindcss-patch": "catalog:tailwindcssPatch",
     "weapp-ide-cli": "catalog:weappIdeCli",
     "weapp-tailwindcss": "workspace:*"
   }
