--- a/apps/vue-app/package.json
+++ b/apps/vue-app/package.json
@@ -9,6 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.554.0",
+    "reka-ui": "^2.6.0",
+    "tailwind-merge": "^3.4.0",
     "vue": "^3.5.24"
   },
   "devDependencies": {
@@ -17,6 +22,7 @@
     "@vue/tsconfig": "^0.8.1",
     "postcss": "catalog:postcss85",
     "tailwindcss": "catalog:tailwindcss4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "catalog:typescript59tilde",
     "vite": "catalog:vite724",
     "vue-tsc": "^3.1.5"
