--- a/apps/vue-app/tsconfig.app.json
+++ b/apps/vue-app/tsconfig.app.json
@@ -3,6 +3,12 @@
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
     /* Linting */
     "strict": true,
     "noFallthroughCasesInSwitch": true,
