--- a/packages/wetw/package.json
+++ b/packages/wetw/package.json
@@ -48,6 +48,7 @@
   },
   "publishConfig": {},
   "dependencies": {
+    "@inquirer/prompts": "^8.0.1",
     "c12": "^3.3.2",
     "cac": "^6.7.14"
   }
