--- a/e2e/package.json
+++ b/e2e/package.json
@@ -5,7 +5,7 @@
   "scripts": {},
   "dependencies": {
     "@tailwindcss-mangle/config": "^6.1.0",
-    "prettier": "^3.6.2",
+    "prettier": "catalog:prettier371",
     "tailwindcss-patch": "catalog:tailwindcssPatch"
   }
 }
