--- a/package.json
+++ b/package.json
@@ -118,8 +118,8 @@
     "@csstools/postcss-is-pseudo-class": "^5.0.3",
     "@eslint/config-inspector": "^1.4.2",
     "@icebreakers/commitlint-config": "^1.2.2",
-    "@icebreakers/eslint-config": "^1.5.10",
-    "@icebreakers/monorepo": "^3.0.1",
+    "@icebreakers/eslint-config": "^1.6.0",
+    "@icebreakers/monorepo": "^3.0.2",
     "@icebreakers/stylelint-config": "^1.2.3",
     "@swc/core": "^1.15.3",
     "@tailwindcss/postcss": "catalog:tailwindcss4",
@@ -223,7 +223,7 @@
     "postcss-loader": "^8.2.0",
     "postcss-preset-env": "^10.4.0",
     "postcss-scss": "^4.0.9",
-    "prettier": "^3.6.2",
+    "prettier": "catalog:prettier371",
     "promisify-loader-runner": "^1.0.1",
     "rimraf": "^6.1.2",
     "rollup": "^4.53.3",
